--- a/PowerPack/v.01/PowerPack/com/dialog/EditCaption.mxml
+++ b/PowerPack/v.01/PowerPack/com/dialog/EditCaption.mxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:TitleWindow xmlns:mx="http://www.adobe.com/2006/mxml" layout="absolute" width="400" height="182" showCloseButton="true"
-	creationComplete="complete();" defaultButton="{btnOk}">
+<mx:TitleWindow xmlns:mx="http://www.adobe.com/2006/mxml" layout="absolute" width="344" height="150" showCloseButton="true"
+	creationComplete="show();" defaultButton="{btnOk}">
 	<mx:Script>
 		<![CDATA[
 			import mx.events.CloseEvent;
@@ -12,12 +12,12 @@
 		    
 		    public var caption:String;
 		    
-		    public static function show(caption:String = "", title:String="New tab", parent:Sprite = null):GraphEditTab
+		    public static function show(caption:String = "", title:String="New tab", parent:Sprite = null):EditCaption
 		    {
 		        if (!parent)
 		            parent = Sprite(Application.application);		        
 		        
-		        var dialog:GraphEditTab = new GraphEditTab();		            
+		        var dialog:EditCaption = new EditCaption();		            
 
 		        dialog._caption = caption;
 		        dialog._title = title;
@@ -28,7 +28,7 @@
 		        return dialog;
 		    }	
 		    
-			private function complete():void
+			private function show():void
 			{
 		        txtCaption.text = _caption;
 				title = _title;
@@ -55,9 +55,9 @@
 	</mx:Script>	
 	<mx:VBox width="100%" height="100%" verticalAlign="bottom" horizontalAlign="center">
 		<mx:Canvas width="100%" height="100%">
-			<mx:TextInput x="68.5" y="37" width="243" id="txtCaption"/>
+			<mx:TextInput x="40.5" y="25" width="243" id="txtCaption"/>
 		</mx:Canvas>
-		<mx:ControlBar verticalAlign="bottom" width="100%" horizontalAlign="right">
+		<mx:ControlBar verticalAlign="bottom" width="100%" horizontalAlign="right" paddingLeft="5" paddingBottom="5" paddingRight="5" paddingTop="5">
 			<mx:Button label="Ok" id="btnOk" width="57" click="caption=txtCaption.text; close();"/>
 			<mx:Button label="Cancel" id="btnCancel" click="close();"/>
 		</mx:ControlBar>
