git-svn-id: http://svn.vdombox.ru/flextools/trunk@1116 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/components/treeEditor/TreeEditor.mxml
+++ b/IDE/Vdom/vdom/components/treeEditor/TreeEditor.mxml
@@ -11,7 +11,7 @@
 		import vdom.Languages;
 		import vdom.components.editor.containers.AttributesPanel;
 		import vdom.events.DataManagerEvent;
-		import vdom.managers.ResourceManager;
+		import vdom.managers.FileManager;
 		import mx.controls.Alert;
 		import mx.events.CloseEvent;
 		import vdom.managers.DataManager;
@@ -183,7 +183,7 @@
 			//trace('Here: ' + massTreeElements[obID].resourceID);
 			if (massTreeElements[obID].resourceID!='') 
 			{
-				var resMan:ResourceManager = ResourceManager.getInstance();
+				var resMan:FileManager = FileManager.getInstance();
 				resMan.loadResource(publicData.applicationId, massTreeElements[obID].resourceID, this);
 			//	trace('Work!');
 			}
