--- a/IDE/Vdom/Vdom.mxml
+++ b/IDE/Vdom/Vdom.mxml
@@ -3,7 +3,7 @@
 	
 	initialize="initalizeHandler();"
 	
-	minWidth="800" minHeight="400"
+	
 	
 	verticalScrollPolicy="off"
 	
@@ -23,9 +23,9 @@
 	<mx:ViewStack id="viewstack" width="100%" height="100%">
 	
 	<loginForm:LoginForm id="loginForm" 
-		authDataChanged="submitLogin(event)" submitBegin="lockStage()" creationPolicy="queued"/>
+		authDataChanged="submitLogin(event)" submitBegin="lockStage()"/>
 	
-	<mx:Canvas id="main" creationComplete="mainInitHandler(event)" width="100%" height="100%" creationPolicy="none">
+	<mx:Canvas id="main" creationComplete="mainInitHandler(event)" width="100%" height="100%">
 	<mx:ApplicationControlBar
 		top="0" left="0" right="0" height="80" 
 		fillColors="#000000" dock="true" cornerRadius="0">
@@ -42,7 +42,7 @@
 	<controls:MainTabNavigator id="tabPanel"
 		top="90" left="10" right="10"
 		paddingBottom="10" paddingTop="10" paddingRight="10" paddingLeft="10" tabPaddingLeft="80"
-	 height="140">
+	 	height="140">
 		
 		<mx:Canvas id="appManTab" label="{languages.language.(@label == 'main_title')}" 
 			width="100%" height="100%" verticalScrollPolicy="off"
