fixed same Errors at ScriptEditor
git-svn-id: http://svn.vdombox.ru/flextools/trunk@1131 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/components/scriptEditor/ScriptEditor.mxml
+++ b/IDE/Vdom/vdom/components/scriptEditor/ScriptEditor.mxml
@@ -17,6 +17,9 @@
 		
 		private function creationCompleteHandler():void{
 			
+			if(!numStrok) numStrok = new TextArea(); // for fixed Edrror
+			if(!txtArea) txtArea = new TabbedTextArea(); //// for fixed Edrror
+			
 			dataManager = DataManager.getInstance();
 			
 			numStrok.text ="";
