git-svn-id: http://svn.vdombox.ru/flextools/trunk@1151 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/components/edition/Editor.mxml
+++ b/IDE/Vdom/vdom/components/edition/Editor.mxml
@@ -8,7 +8,7 @@
 	
 	horizontalScrollPolicy="off" verticalScrollPolicy="off"
 	
-	creationComplete="creationCompleteHandler();"
+	initialize="initializeHandler();"
 	show="showHandler();"
 	hide="hideHandler();"
 >
@@ -43,8 +43,8 @@
 			
 			<containers:AttributesPanel id="attributesPanel"
 				title="OBJECT PROPERTIES"
-				acceptLabel="{languages.language.(@label == 'editor_save')}" 
-				cancelLabel="{languages.language.(@label == 'editor_cancel')}"
+				acceptLabel="{resourceManager.getString('Application','editor_save')}" 
+				cancelLabel="{resourceManager.getString('Application','editor_cancel')}"
 				dataProvider="{dataManager.objectDescription}" width="200" />
 
 			<containers:ClosablePanel id="helpPanel" title="Help" 
