--- a/IDE/Vdom/Vdom.mxml
+++ b/IDE/Vdom/Vdom.mxml
@@ -3,29 +3,33 @@
 	
 	initialize="initalizeHandler();"
 	
-	
-	
 	verticalScrollPolicy="off"
 	
-	xmlns:vdom="vdom.*" 
+	xmlns:vdom="vdom.*"
+	xmlns:modules="vdom.modules.*"
 	xmlns:controls="vdom.containers.*" 
 	xmlns:editor="vdom.components.editor.*"
 	xmlns:scriptEditor="vdom.components.scriptEditor.*"
 	xmlns:loginForm="vdom.components.loginForm.*" 
 	xmlns:main="vdom.components.main.*"
-	xmlns:analyse="vdom.components.analyse.*" xmlns:treeEditor="vdom.components.treeEditor.*">
+	xmlns:analyse="vdom.components.analyse.*" 
+	xmlns:treeEditor="vdom.components.treeEditor.*"  
+	>
 	
 	<mx:Script source="includes/Vdom.as"/>
 	
-	<mx:XML source="langs/languages.xml" id="languageList" />
-	<mx:XML source="langs/translation.xml" id="languagesTranslation" />
+	<mx:Metadata>
+		[ResourceBundle("Application")]
+	</mx:Metadata>
+	
+	<mx:XML id="languageList" source="locale/locales.xml" />
 	
 	<mx:ViewStack id="viewstack" width="100%" height="100%">
 	
 	<loginForm:LoginForm id="loginForm" 
 		authDataChanged="submitLogin(event)" submitBegin="lockStage()"/>
 	
-	<mx:Canvas id="main" creationComplete="mainInitHandler(event)" width="100%" height="100%">
+	<mx:Canvas id="main"  width="100%" height="100%">
 	<mx:ApplicationControlBar
 		top="0" left="0" right="0" height="80" 
 		fillColors="#000000" dock="true" cornerRadius="0">
@@ -42,9 +46,11 @@
 	<controls:MainTabNavigator id="tabPanel"
 		top="90" left="10" right="10"
 		paddingBottom="10" paddingTop="10" paddingRight="10" paddingLeft="10" tabPaddingLeft="80"
-	 	height="140">
-		
-		<mx:Canvas id="appManTab" label="{languages.language.(@label == 'main_title')}" 
+ bottom="10">
+	 	<modules:ApplicationManagment />
+	 	<modules:Editor />
+		<!--
+		<mx:Canvas id="appManTab" label="{resourceManager.getString('Application','main_title')}" 
 			width="100%" height="100%" verticalScrollPolicy="off"
 			show="{placeCanvas.selectedChild=mainCanvas}">
 			
@@ -52,14 +58,14 @@
 				top="0" bottom="0" width="100%" horizontalAlign="left" horizontalGap="5" verticalAlign="middle">
 				
 				<controls:ActionButton styleName="newsButton"
-					label="{languages.language.(@label == 'main_new')}"
+					label="{resourceManager.getString('Application','main_new')}"
 					labelPlacement="bottom"/>
 				
 				<controls:ActionButton styleName="newsButton"
-					label="{languages.language.(@label == 'main_steps')}"
+					label="{resourceManager.getString('Application','main_steps')}"
 					labelPlacement="bottom"/>
 
-				<controls:ActionPanel panelName="{languages.language.(@label == 'main_search')}"
+				<controls:ActionPanel panelName="{resourceManager.getString('Application','main_search')}"
 					width="250" height="86" dropShadowEnabled="false">
 				
 					<mx:HBox width="100%">
@@ -73,38 +79,39 @@
 					
 				</controls:ActionPanel>
 				
-				<controls:ApplicationPanel id="applicationListContainer"
+				<controls:ApplicationPanel id="listApplicationContainer"
 					dropShadowEnabled="false"
-					panelName="{languages.language.(@label == 'main_applist')}" 
-					dataProvider="{listApplication.Application}"
-					applicationChange="appChangedHandler(event)"
+					panelName="{resourceManager.getString('Application','main_applist')}" 
+					dataProvider="{dataManager.listApplication}"
+					applicationChanged="applicationChangedHandler(event)"
 					height="86"/>
 				
 				<controls:ActionPanel
 					
-					panelName="{languages.language.(@label == 'main_appinfo')}"
+					panelName="{resourceManager.getString('Application','main_appinfo')}"
 					visible="true" height="86" dropShadowEnabled="false"/>
 				
 			</controls:ControlPanel>
 		</mx:Canvas>
+		
 		<mx:Canvas id="editorTab"
-			label="{languages.language.(@label == 'editor_title')}" width="100%" height="100%"  
+			label="{resourceManager.getString('Application','edit_title')}" width="100%" height="100%"  
 			show="{placeCanvas.selectedChild=editorCanv}">
 			<controls:ControlPanel 
 				top="0" bottom="0" width="100%" horizontalAlign="left" horizontalGap="5" verticalAlign="middle">
 				
 				<controls:ActionButton styleName="editionButton"
-					label="{languages.language.(@label == 'editor_edition')}"
+					label="{resourceManager.getString('Application','edit_edition')}"
 					labelPlacement="bottom"
 					click="{placeCanvas.selectedChild=editorCanv}"/>
 				
 				<controls:ActionButton styleName="scriptButton" 
-					label="{languages.language.(@label == 'editor_script')}" 
+					label="{resourceManager.getString('Application','edit_script')}" 
 					labelPlacement="bottom"
 					click="{placeCanvas.selectedChild=scriptCanv}"/>
 				
 				<controls:ActionButton styleName="previewButton" 
-					label="{languages.language.(@label == 'editor_preview')}"
+					label="{resourceManager.getString('Application','edit_preview')}"
 					labelPlacement="bottom"
 					switched="false"
 					click="{
@@ -115,47 +122,48 @@
 				
 				<controls:ActionButton styleName="treeButton"
 					labelPlacement="bottom"
-					label="{languages.language.(@label == 'editor_tree')}"
+					label="{resourceManager.getString('Application','edit_tree')}"
 					click="{placeCanvas.selectedChild=treeCanv}"/>
 					
 				
 				<controls:ActionButton styleName="analyseButton"
-					label="{languages.language.(@label == 'editor_analyse')}"
+					label="{resourceManager.getString('Application','edit_analyse')}"
 					labelPlacement="bottom"
 					click="{placeCanvas.selectedChild=analyseCanv}"/>
 				
 				<controls:ActionButton styleName="statisticsButton" 
-					label="{languages.language.(@label == 'editor_statistics')}"
+					label="{resourceManager.getString('Application','edit_statistics')}"
 					labelPlacement="bottom"/>
 				
 				<controls:ActionButton styleName="eventsButton"
-					label="{languages.language.(@label == 'editor_events')}"
+					label="{resourceManager.getString('Application','edit_events')}"
 					labelPlacement="bottom"/>
 					
 			</controls:ControlPanel>
 		</mx:Canvas>
+		-->
 		<mx:Canvas id="multilinTab"
-			label="{languages.language.(@label == 'mling_title')}" width="100%" height="100%"  
+			label="{resourceManager.getString('Application','mling_title')}" width="100%" height="100%"  
 			show="{placeCanvas.selectedChild=multilinCanv}">
 		</mx:Canvas>
 		<mx:Canvas id="portalManTab"
-			label="{languages.language.(@label == 'portal_title')}" width="100%" height="100%" 
+			label="{resourceManager.getString('Application','portal_title')}" width="100%" height="100%" 
 			show="{placeCanvas.selectedChild=portalManCanv}">
 		</mx:Canvas>
 		<mx:Canvas id="publishTab"
-			label="{languages.language.(@label == 'publish_title')}" width="100%" height="100%" 
+			label="{resourceManager.getString('Application','publish_title')}" width="100%" height="100%" 
 			show="{placeCanvas.selectedChild=publishCanv}">
 		</mx:Canvas>
 		<mx:Canvas id="safeguardTab"
-			label="{languages.language.(@label == 'safe_title')}" width="100%" height="100%"  
+			label="{resourceManager.getString('Application','safe_title')}" width="100%" height="100%"  
 			show="{placeCanvas.selectedChild=safeguardCanv}">
 		</mx:Canvas>
 		<mx:Canvas id="vdomTab"
-			label="{languages.language.(@label == 'vdom_title')}" width="100%" height="100%"  
+			label="{resourceManager.getString('Application','vdom_title')}" width="100%" height="100%"  
 			show="{placeCanvas.selectedChild=vdomCanv}">
 		</mx:Canvas>
 	</controls:MainTabNavigator>
-	<mx:ViewStack id="placeCanvas"
+	<!-- <mx:ViewStack id="placeCanvas"
 		borderStyle="none" left="10" right="10" top="240" bottom="10">
 	
 		<main:Main id="mainCanvas"
@@ -186,7 +194,7 @@
 		<mx:Canvas id="vdomCanv" width="100%" height="100%">
 			<mx:Label horizontalCenter="0" verticalCenter="0"/>
 		</mx:Canvas>
-	</mx:ViewStack>
+	</mx:ViewStack> -->
 	</mx:Canvas>
 	</mx:ViewStack>
 </mx:WindowedApplication>
